# Subdivision

./: .gitignore  程序说明.docx
Subdivision/: CMakeLists.txt  ChildFrm.cpp  DC.cpp  DC.h  DibSection.cpp  DibSection.h  MainFrm.cpp  MainFrm.h  Mesh3D.cpp  Mesh3D.h  MeshSubdivision.cpp  MeshSubdivision.h  ReadMe.txt  Subdivision.aps  Subdivision.cpp  Subdivision.h  Subdivision.rc  Subdivision.sln  Subdivision.sln.old  Subdivision.suo.old  Subdivision.vcproj  Subdivision.vcxproj  Subdivision.vcxproj.filters  SubdivisionDoc.cpp  SubdivisionDoc.h  SubdivisionView.cpp  SubdivisionView.h  UpgradeLog.XML  UpgradeLog.htm  bitmap.cpp  bitmap.h  resource.h  stdafx.cpp  stdafx.h
Subdivision/Debug/: Subdivision.ilk  Subdivision.res  vc142.idb
Subdivision/Debug/Subdivision.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Subdivision.lastbuildstate  link.7512.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Subdivision/lib/arcball/: Arcball.h  Camera.h
Subdivision/res/: Subdivision.rc2  Thumbs.db
